added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1076,6 +1076,88 @@
    "source": [
     "model_fit.plot_diagnostics(figsize=(10, 8));"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In figure 6.18 you can see that the top-left plot shows no trend, and the mean seems constant over time, meaning that our residuals are likely stationary. The top right displays a density plot with a shape similar to that of a normal distribution. The Q-Q plot at the bottom left shows a thick straight line that is very close to y = x. Finally, the ACF plot at the bottom right shows no autocorrelation after lag 0. Thus, figure 6.18 indicates that our residuals clearly resemble white noise, since they are normally distributed and uncorrelated."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Our last step is to run the Ljung-Box test on the residuals for the first 10 lags. If the returned p-values exceed 0.05, we cannot reject the null hypothesis, which means that our residuals are uncorrelated and independently distributed, just like white noise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lb_pvalue\n"
+     ]
+    }
+   ],
+   "source": [
+    "residuals = model_fit.resid\n",
+    "\n",
+    "lbvalue, pvalue = acorr_ljungbox(residuals, np.arange(1, 11, 1))\n",
+    "\n",
+    "print(pvalue)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rolling_forecast(df: pd.DataFrame, train_len: int, horizon: int, window: int, method: str) -> list:\n",
+    "    \n",
+    "    total_len = train_len + horizon\n",
+    "    end_idx = train_len\n",
+    "    \n",
+    "    if method == 'mean':\n",
+    "        pred_mean = []\n",
+    "        \n",
+    "        for i in range(train_len, total_len, window):\n",
+    "            mean = np.mean(df[:i].values)\n",
+    "            pred_mean.extend(mean for _ in range(window))\n",
+    "            \n",
+    "        return pred_mean\n",
+    "\n",
+    "    elif method == 'last':\n",
+    "        pred_last_value = []\n",
+    "        \n",
+    "        for i in range(train_len, total_len, window):\n",
+    "            last_value = df[:i].iloc[-1].values[0]\n",
+    "            pred_last_value.extend(last_value for _ in range(window))\n",
+    "            \n",
+    "        return pred_last_value\n",
+    "    \n",
+    "    elif method == 'ARMA':\n",
+    "        pred_ARMA = []\n",
+    "        \n",
+    "        for i in range(train_len, total_len, window):\n",
+    "            model = SARIMAX(df[:i], order=(2,0,2))\n",
+    "            res = model.fit(disp=False)\n",
+    "            predictions = res.get_prediction(0, i + window - 1)\n",
+    "            oos_pred = predictions.predicted_mean.iloc[-window:]\n",
+    "            pred_ARMA.extend(oos_pred)\n",
+    "            \n",
+    "        return pred_ARMA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
