added enw notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
@@ -1436,6 +1436,27 @@
     "\n",
     "print(mae_ARMA_undiff)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The autoregressive moving average model, denoted as ARMA(p,q), is the combination of the autoregressive model AR(p) and the moving average model MA(q).\n",
+    "\n",
+    "- An ARMA(p,q) process will display a decaying pattern or a sinusoidal pattern on both the ACF and PACF plots. Therefore, they cannot be used to estimate the orders p and q.\n",
+    "\n",
+    "- The general modeling procedure does not rely on the ACF and PACF plots. Instead, we fit many ARMA(p,q) models and perform model selection and residual analysis.\n",
+    "\n",
+    "- Model selection is done with the Akaike information criterion (AIC). It quantifies the information loss of a model, and it is related to the number of parameters in a model and its goodness of fit. The lower the AIC, the better the model.\n",
+    "\n",
+    "- The AIC is relative measure of quality. It returns the best model among other models. For an absolute measure of quality, we perform residual analysis.\n",
+    "\n",
+    "- Residuals of a good model must approximate white noise, meaning that they must be uncorrelated, normally distributed, and independent.\n",
+    "\n",
+    "- The Q-Q plot is a graphical tool for comparing two distributions. We use it to compare the distribution of the residuals against a theoretical normal distribution. If the plot shows a straight line that lies on y = x, then both distributions are similar. Otherwise, it means that the residuals are not normally distributed.\n",
+    "\n",
+    "- The Ljung-Box test allows us to determine whether the residuals are correlated or not. The null hypothesis states that the data is independently distributed and uncorrelated. If the returned p-values are larger than 0.05, we cannot reject the null hypothesis, meaning that the residuals are uncorrelated, just like white noise."
+   ]
   }
  ],
  "metadata": {
