added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Forecasting-Non-Stationary.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Forecasting-Non-Stationary.ipynb
@@ -36,7 +36,8 @@
     "- It is denoted as ARIMA(p,d,q), where p is the order of the AR(p) process, d is the order of integration, and q is the order of the MA(q) process.\n",
     "- Integration is the reverse of differencing, and the order of integration d is equal to the number of times the series has been differenced to be rendered stationary.\n",
     "- y't = C + φ1y't–1 +⋅⋅⋅ φp y't–p + θ1ϵ't–1 +⋅⋅⋅+ θqϵ't–q + ϵt\n",
-    "- Note that y't represents the differenced series, and it may have been differenced more than once."
+    "- Note that y't represents the differenced series, and it may have been differenced more than once.\n",
+    "#### A time series that can be rendered stationary by applying differencing is said to be an integrated series. In the presence of a non-stationary integrated time series, we can use the ARIMA(p,d,q) model to produce forecasts."
    ]
   },
   {
