--- a/Mathematics/Time-Series/Forecasting-With-Python/Forecasting-Non-Stationary.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Forecasting-Non-Stationary.ipynb
@@ -37,7 +37,9 @@
     "- Integration is the reverse of differencing, and the order of integration d is equal to the number of times the series has been differenced to be rendered stationary.\n",
     "- y't = C + φ1y't–1 +⋅⋅⋅ φp y't–p + θ1ϵ't–1 +⋅⋅⋅+ θqϵ't–q + ϵt\n",
     "- Note that y't represents the differenced series, and it may have been differenced more than once.\n",
-    "#### A time series that can be rendered stationary by applying differencing is said to be an integrated series. In the presence of a non-stationary integrated time series, we can use the ARIMA(p,d,q) model to produce forecasts."
+    "\n",
+    "#### A time series that can be rendered stationary by applying differencing is said to be an integrated series. In the presence of a non-stationary integrated time series, we can use the ARIMA(p,d,q) model to produce forecasts.\n",
+    "#### Thus, in simple terms, the ARIMA model is simply an ARMA model that can be applied on non-stationary time series. Whereas the ARMA(p,q) model requires the series to be stationary before fitting an ARMA(p,q) model, the ARIMA(p,d,q) model can be used on non-stationary series. We must simply find the order of integration d, which corresponds to the minimum number of times a series must be differenced to become stationary."
    ]
   },
   {
