added new imports

--- a/Mathematics/Time-Series/Forecasting-With-Python/Forecasting-Non-Stationary.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Forecasting-Non-Stationary.ipynb
@@ -99,15 +99,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF Statistic: 2.7420165734574686\n",
+      "p-value: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "ad_fuller_result = adfuller(df['data'])\n",
     " \n",
     "print(f'ADF Statistic: {ad_fuller_result[0]}')\n",
     "print(f'p-value: {ad_fuller_result[1]}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF Statistic: -0.40740976363804626\n",
+      "p-value: 0.9088542416911305\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps_diff = np.diff(df['data'], n=1)\n",
+    " \n",
+    "ad_fuller_result = adfuller(eps_diff)\n",
+    " \n",
+    "print(f'ADF Statistic: {ad_fuller_result[0]}')\n",
+    "print(f'p-value: {ad_fuller_result[1]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This results in an ADF statistic of –0.41 and a p-value of 0.9. Again, the ADF statistic is not a large negative number, and the p-value is larger than 0.05. Therefore, we cannot reject the null hypothesis and we must conclude that after a first-order differencing, the series is not stationary.\n",
+    "\n",
+    "Let’s try differencing again to see if the series becomes stationary:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
