added new imports

--- a/Mathematics/Time-Series/Forecasting-With-Python/Accounting-Seaonsal.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Accounting-Seaonsal.ipynb
@@ -29,6 +29,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Note that a SARIMA(p,d,q)(0,0,0)m model is equivalent to an ARIMA(p,d,q) model.\n",
+    "\n",
+    "#### Let’s consider an example where m = 12. If P = 2, this means that we are including two past values of the series at a lag that is a multiple of m. Therefore, we’ll include the values at yt–12 and yt–24.\n",
+    "\n",
+    "#### Similarly, if D = 1, this means that a seasonal difference makes the series stationary. In this case, a seasonal difference would be expressed as equation 8.1.\n",
+    "\n",
+    "#### y't = yt– yt–12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Identifying seasonal patterns in a time series\n",
+    "\n",
+    "## Time series decomposition\n",
+    "\n",
+    "- Time series decomposition is a statistical task that separates the time series into its three main components: a trend component, a seasonal component, and the residuals.\n",
+    "\n",
+    "#### The trend component represents the long-term change in the time series. This component is responsible for time series that increase or decrease over time. The seasonal component is the periodic pattern in the time series. It represents repeated fluctuations that occur over a fixed period of time. Finally, the residuals, or the noise, express any irregularity that cannot be explained by the trend or the seasonal component."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
