added new imports

--- a/Mathematics/Time-Series/Forecasting-With-Python/Deep-Learning.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Deep-Learning.ipynb
@@ -132,7 +132,13 @@
    "source": [
     "## The input gate\n",
     "\n",
-    "#### Once information has passed through the forget gate, it proceeds to the input gate. This is the step where the network determines which information is relevant from the current element of the sequence. The cell state is updated again here, resulting in the final cell state."
+    "#### Once information has passed through the forget gate, it proceeds to the input gate. This is the step where the network determines which information is relevant from the current element of the sequence. The cell state is updated again here, resulting in the final cell state.\n",
+    "\n",
+    "#### Once information has passed through the forget gate, it proceeds to the input gate. This is the step where the network determines which information is relevant from the current element of the sequence. The cell state is updated again here, resulting in the final cell state.\n",
+    "\n",
+    "## The output gate\n",
+    "\n",
+    "#### Information has now passed from the forget gate to the input gate, and now it arrives at the output gate. It is in this gate that past information contained in the network’s memory, represented by the cell state Ct, is finally used to process the current element of the sequence. This is also where the network either outputs a result to the output layer or computes new information to be sent to the processing of the next element in the sequence."
    ]
   },
   {
