added new imports

--- a/Mathematics/Time-Series/Forecasting-With-Python/Deep-Learning.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Deep-Learning.ipynb
@@ -144,7 +144,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### In figure 15.8 the past hidden state and current element of a sequence are sent through the sigmoid function. In parallel, the cell state goes through the tanh function. The resulting values from the tanh and sigmoid functions are then combined using pointwise multiplication, generating an updated hidden state ht. This is the step where past information, represented by the cell state Ct, is used to process the information of the present element of the sequence.\n",
+    "\n",
+    "#### The current hidden state is then sent out of the output gate. This will either be sent to the output layer of the network or to the next LSTM neuron treating the next element of the sequence. The same applies for the cell state Ct.\n",
+    "\n",
+    "#### In summary, the forget gate determines which information from the past is kept or discarded. The input gate determines which information from the current step is kept to update the network’s memory or is discarded. Finally, the output gate uses the information from the past stored in the network’s memory to process the current element of a sequence."
+   ]
   }
  ],
  "metadata": {
