added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Deep-Learning.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Deep-Learning.ipynb
@@ -151,6 +151,16 @@
     "\n",
     "#### In summary, the forget gate determines which information from the past is kept or discarded. The input gate determines which information from the current step is kept to update the network’s memory or is discarded. Finally, the output gate uses the information from the past stored in the network’s memory to process the current element of a sequence."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Examining the convolutional neural network (CNN)\n",
+    "\n",
+    "#### A convolutional neural network is a deep learning architecture that makes use of the convolution operation. The convolution operation allows the network to create a reduced set of features. Therefore, it is a way of regularizing the network, preventing overfitting, and effectively filtering the inputs. Of course, for this to make sense, you must first understand the convolution operation and how it impacts the inputs.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
