added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Deep-Learning.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Deep-Learning.ipynb
@@ -185,6 +185,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- output length = input length – kernel length + 1\n",
+    "- input length = output length + kernel length – 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
