added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Deep-Learning.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Deep-Learning.ipynb
@@ -193,6 +193,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### a Fourier transform basically allows us to visualize the frequency and amplitude of a signal. Hence, we can treat our time series as a signal, apply a Fourier transform, and find the frequencies with large amplitudes. Those frequencies will determine the seasonal period. The great advantage of this method is that it is independent of the seasonal period. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
