added new notes

--- a/Mathematics/Statistics/Probailistic-Finance.ipynb/Quantifying-Uncertainty.ipynb
+++ b/Mathematics/Statistics/Probailistic-Finance.ipynb/Quantifying-Uncertainty.ipynb
@@ -208,6 +208,13 @@
     "plt.ylabel('Frequency'), plt.show();\n",
     "print(Duration.describe().round())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/p-value.png)"
+   ]
   }
  ],
  "metadata": {
